@@ -16,6 +16,7 @@ extern "C" {
 #endif
 
 #define DIFX_MESSAGE_PARAM_LENGTH	32
+#define DIFX_MESSAGE_VERSION_LENGTH	32
 #define DIFX_MESSAGE_FILENAME_LENGTH	128
 #define DIFX_MESSAGE_MAX_TARGETS	128
 #define DIFX_MESSAGE_LENGTH		1500
@@ -236,6 +237,7 @@ typedef struct
 	char mpiOptions[DIFX_MESSAGE_FILENAME_LENGTH];
 	char difxProgram[DIFX_MESSAGE_FILENAME_LENGTH];
 	int force;
+	char difxVersion[DIFX_MESSAGE_VERSION_LENGTH];
 } DifxMessageStart;
 
 typedef struct
